Test task init commit

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kruzhalin/TestTask",
+    "name": "kruzhalin/currency-converter",
     "description": "Kruzhalin ORBA Test Task",
     "type": "magento2-module",
     "version": "1.0.0",
